--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "react": {
+    "TrivyDash": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7118;http://localhost:5160",
