--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "eslint-config-react-app": "6",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
@@ -30,10 +31,11 @@
     "workbox-streams": "^5.1.3"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "ajv": "^6.9.1",
+    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.25.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
