pgsql setup: - create docker-compose with pgsql service - run initial EF migration - create idempotent DB schema file - remove unused namespace in Program.cs

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Db1": "Host=db;Database=reports;Username=my_user;Password=my_pw"
+  },
   "Logging": {
       "LogLevel": {
       "Default": "Information",
