--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,6 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "IdentityServer": {
+      "Key": {
+        "Type": "Development"
+      }
     }
   }
 }
