--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
+    "IdentityServer": {
+      "Clients": {
+        "TrivyDash": {
+          "Profile": "IdentityServerSPA"
+        }
+      }
+    },
 "AllowedHosts": "*"
 }
