--- a/ClientApp/public/manifest.json
+++ b/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "react",
-  "name": "react",
+  "short_name": "TrivyDash",
+  "name": "TrivyDash",
   "icons": [
     {
       "src": "favicon.ico",
