--- a/appsettings.json
+++ b/appsettings.json
@@ -1,20 +1,18 @@
 {
   "ConnectionStrings": {
-    "Db1": "Host=db;Database=reports;Username=my_user;Password=my_pw"
+    "Db1": "Host=db;Database=reports;Username=postgres;Password=my_pw"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "IdentityServer": {
-      "Clients": {
-        "TrivyDash": {
-          "Profile": "IdentityServerSPA"
-        }
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    }
+  },
+  "AllowedHosts": "*"
 }
