--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/bin/Debug/net6.0/react.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/TrivyDash.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
