update api-authorization components. register client ID in appsettings.

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,11 @@
     }
   },
   "IdentityServer": {
+    "Clients": {
+      "TrivyDash": {
+        "Profile": "IdentityServerSPA"
+      }
+    },
     "Key": {
       "Type": "Development"
     }
