add report RenderReport component. Refactor FetchReports. Refactor ReportsTable component.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Db1": "Host=db;Database=reports;Username=postgres;Password=my_pw"
+    "Db1": "Host=127.0.0.1;Database=reports;Username=my_user;Password=my_pw"
   },
   "Logging": {
     "LogLevel": {
